# S-Gens

./: README.md
s-gens/: README.md  pyproject.toml
s-gens/data/: README.md  README.zh-CN.md  demo_documents.json  demo_kg.json  demo_original.json
s-gens/data/raw_samples/: hotpotqa_sample.json  nq_sample.json  triviaqa_sample.json  webqsp_sample.json
s-gens/data/scripts/: prepare_dataset.ps1  run_dataset.ps1
s-gens/outputs/: demo_mixed_training.json  demo_pairs.json  demo_triplets.json  results_table.md
s-gens/outputs/hotpotqa_faithful/normalized/: original.json
s-gens/outputs/hotpotqa_faithful/sgens/: mixed_training.json
s-gens/outputs/hotpotqa_paper/: metrics.json  results.json  results.md
s-gens/outputs/hotpotqa_paper/normalized/: kg.json
s-gens/outputs/hotpotqa_paper/sgens_run/: run_manifest.json
s-gens/outputs/hotpotqa_prepared/: original.json
s-gens/outputs/hotpotqa_run/normalized/: documents.json  metadata.json  original.json
s-gens/outputs/hotpotqa_run/sgens/: mixed_training.json  pairs.json  triplets.json
s-gens/outputs/hotpotqa_v2/normalized/: original.json
s-gens/outputs/hotpotqa_v2/sgens/: mixed_training.json  pairs.json  triplets.json
s-gens/scripts/: run_full_pipeline.ps1  run_paper_pipeline.ps1  summarize_run.ps1
s-gens/sgens/: __init__.py  cli.py  datasets.py  evaluation.py  gnn.py  metrics.py  ollama.py  pipeline.py  presets.py  rag.py  reporting.py  retriever.py  training.py
s-gens/tests/: test_datasets.py  test_metrics_rag.py  test_pipeline.py  test_reporting.py  test_reporting_table.py
(+7 files in other folders)
